# guile-magic

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.org  THANKS  configure.ac  magic.scm
magic/: Makefile.am  magic.scm  vars.scm.am.in
test/: .gitignore  Makefile.am  test-magic  test-magic.scm
test/data/: Makefile.am  test-magic
