AM_TESTS_ENVIRONMENT =                   \
    abs_top_srcdir=$(abs_top_srcdir)     \
    abs_top_builddir=$(abs_top_builddir) \
    GUILE_AUTO_COMPILE=0

TESTS = test-magic
SUBDIRS = data
EXTRA_DIST = $(TESTS) test-magic.scm
CLEANFILES = magic-tests.log option-tests.log param-tests.log smoke-tests.log negative-tests.log

